# mcf2swc

./: .gitignore  README.md  debug_normal_strategy.py  debug_radial_simple.py  fix_tests.py  pyproject.toml  setup.py
data/: test_optimized_skeleton.polylines.graphml  test_optimized_skeleton.polylines.txt  test_skeleton.graphml  test_skeleton_graph_output.polylines.graphml  test_skeleton_processed.polylines.graphml
docs/: radius_optimization.md
examples/: constraint_modes_demo.py  make_demo_meshes.py  radius_optimization_demo.py  skeleton_optimization_demo.py
mcf2swc/: __init__.py  graph_fitting.py  mesh.py  object3d.py  polylines.py  radius_optimizer.py  radius_optimizer_local.py  skeleton.py  skeleton_optimizer.py  trace.py  viz.py
mcf2swc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: 01a_cylinder_mesh.ipynb  01b_torus_mesh.ipynb  01c_neuron_mesh.ipynb  02a_cylinder_skeleton.ipynb  02b_torus_skeleton.ipynb  02c_neuron_skeleton.ipynb  02d_TS2_skeleton.ipynb  TS21_skeleton.ipynb  TS2_morpho.ipynb  analyze_ts2_optimization.py  check_endpoint_distances.py  demo_polylines.ipynb  demo_skeleton_optimizer.ipynb  demo_torus_skeleton.ipynb  demo_trace.ipynb  demo_viz.ipynb  mesh_testing.ipynb  skeleton_graphs.ipynb  test_branch_detection.py  test_branch_pruning.py  test_medial_axis_centering.py
tests/: test_branch_detection.py  test_branch_pruning.py  test_medial_axis_centering.py  test_multi_direction_quick.py  test_multi_direction_sampling.py  test_normal_strategy.py  test_radius_optimizer.py  test_ray_tracing.py  test_skeleton_graph.py  (+4 more)
(+118 files in other folders)
