[project]
name = "mcf2swc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "navis>=1.10.0",
    "nbformat>=5.10.4",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyvista[jupyter]>=0.46.3",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "trame>=3.12.0",
    "trimesh>=4.8.1",
]
