[project]
name = "mcf2swc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pytest>=8.4.2",
    "rtree>=1.4.1",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "swctools",
    "trimesh>=4.8.1",
]

[tool.uv.sources]
swctools = { git = "https://github.com/jmrfox/swctools.git" }
